--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
       
       <div class="section group">
-				<h2>Animated Headline</h2>
+				<h2 class="animated infinite flash">Animated Headline</h2>
 				</div>
 
         <div class="section group">
